making external-facing members serializable

--- a/Clients/CSharp/AmbrosiaCS/ProxyGenerator.tt
+++ b/Clients/CSharp/AmbrosiaCS/ProxyGenerator.tt
@@ -86,7 +86,7 @@ namespace <#= this.interfaceType.Namespace #>
             int taskId;
 			lock (Immortal.DispatchTaskIdQueueLock)
             {
-                while (!Immortal.DispatchTaskIdQueue.TryDequeue(out taskId)) { }
+                while (!Immortal.DispatchTaskIdQueue.Data.TryDequeue(out taskId)) { }
             }
 
             ReleaseBufferAndSend();
