Updated client cmp file for Async basic test

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/asyncbasic_ClientJob_Verify.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/asyncbasic_ClientJob_Verify.cmp
@@ -1,6 +1,11 @@
 *X* Bytes per RPC	Throughput (GB/sec)
-*X* 65536	0.0175538006435925
-*X* 32768	0.0123354012017511
-*X* 16384	0.00671376389044012
+*X* 65536	0.0330248654581842
+*X* 32768	0.00819846658356958
+*X* 16384	0.0138610701638542
+*X* ---------- Summary -------------
+*X* - Total GBs Sent:3
+*X* - Total Time (secs):224.3987448
+*X* - Throughput (GB/Sec):0.0133690587381574
+--------------------------------
 Bytes received: 3221225472
 DONE
