allowing 2 checkpoint messages in a row

--- a/Clients/CSharp/AmbrosiaCS/ProxyGenerator.tt
+++ b/Clients/CSharp/AmbrosiaCS/ProxyGenerator.tt
@@ -96,20 +96,32 @@ namespace <#= this.interfaceType.Namespace #>
 			var taskToWaitFor = Immortal.CallCache.Data[asyncContext.SequenceNumber].GetAwaitableTaskWithAdditionalInfoAsync();
             var currentResult = await taskToWaitFor;
 
-			var isSaved = await Immortal.TrySaveContextContinuationAsync(currentResult);
+			while (currentResult.AdditionalInfoType != ResultAdditionalInfoTypes.SetResult)
+            {
+                switch (currentResult.AdditionalInfoType)
+                {
+                    case ResultAdditionalInfoTypes.SaveContext:
+                        await Immortal.SaveTaskContextAsync();
+                        taskToWaitFor = Immortal.CallCache.Data[asyncContext.SequenceNumber].GetAwaitableTaskWithAdditionalInfoAsync();
+                        break;
+                    case ResultAdditionalInfoTypes.TakeCheckpoint:
+                        var sequenceNumber = await Immortal.TakeTaskCheckpointAsync();
+                        Immortal.StartDispatchLoop();
+                        taskToWaitFor = Immortal.GetTaskToWaitForWithAdditionalInfoAsync(sequenceNumber);
+                        break;
+                }
 
-			if (isSaved)
-			{
-				taskToWaitFor = Immortal.CallCache.Data[asyncContext.SequenceNumber].GetAwaitableTaskWithAdditionalInfoAsync();
-				currentResult = await taskToWaitFor;
-			}			
+                currentResult = await taskToWaitFor;
+            }
 
-			<#= !voidMethod ? "var result =" : ""#> await Immortal.TryTakeCheckpointContinuationAsync(currentResult, taskId);
-
+            lock (Immortal.DispatchTaskIdQueueLock)
+            {
+                Immortal.DispatchTaskIdQueue.Data.Enqueue(taskId);
+            }	
 <# if (voidMethod) { #>
 			return;
 <# } else { #>
-			return (<#= returnTypeName #>) result.Result;
+			return (<#= returnTypeName #>) currentResult.Result;
 <# } #>
         }
 <# } #>
