updating nuget version + adding exception for sending impulses when not primary

--- a/Clients/CSharp/AmbrosiaCS/ProxyGenerator.tt
+++ b/Clients/CSharp/AmbrosiaCS/ProxyGenerator.tt
@@ -128,6 +128,13 @@ namespace <#= this.interfaceType.Namespace #>
 
         void <#= generatedClientInterfaceName #>.<#= M.Name #>Fork(<#= parameterDeclarationString #>)
         {
+<# if (isImpulseHandler) { #>
+			if (!Immortal.IsPrimary)
+			{
+                throw new Exception("Unable to send an Impulse RPC while not being primary.");
+			}
+
+<# } #>
             SerializableTaskCompletionSource rpcTask;
 
             // Compute size of serialized arguments
