--- a/AmbrosiaTest/AmbrosiaTest/Cmp/asyncactiveactivebasic_Server3.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/asyncactiveactivebasic_Server3.cmp
@@ -6,6 +6,8 @@
 *X* Press enter to terminate program.
 *X* Received an initial message
 *X* Server in Entry Point
+*X* Received a becoming primary message
+Becoming a primary now
 *X* Received 1024 MB so far
 *X* Received 2048 MB so far
 Bytes received: 2147483648
