Updated some tests that were not most stable. Fixed them which caused cmp files to be updated.

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/upgradeserverafterserverdone_Server_upgraded.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/upgradeserverafterserverdone_Server_upgraded.cmp
@@ -1,29 +1,13 @@
 *X* Press enter to terminate program.
-*X* I'm healthy after 171000 checks at time:10/11/2018 2:48:16 PM
-*X* I'm healthy after 174000 checks at time:10/11/2018 2:48:22 PM
-*X* I'm healthy after 177000 checks at time:10/11/2018 2:48:28 PM
-*X* I'm healthy after 180000 checks at time:10/11/2018 2:48:34 PM
-*X* I'm healthy after 183000 checks at time:10/11/2018 2:48:40 PM
-Received 13312 MB so far
-Bytes received: 13958643712
+*X* I'm healthy after 33000 checks at time:6/14/2019 2:05:21 PM
+Received 4096 MB so far
+Bytes received: 4294967296
 DONE
-*X* I'm healthy after 216000 checks at time:6/12/2019 9:39:00 AM
-*X* I'm healthy after 219000 checks at time:6/12/2019 9:39:29 AM
-*X* I'm healthy after 222000 checks at time:6/12/2019 9:39:54 AM
-*X* I'm healthy after 225000 checks at time:6/12/2019 9:40:23 AM
-*X* I'm healthy after 228000 checks at time:6/12/2019 9:40:54 AM
-*X* I'm healthy after 231000 checks at time:6/12/2019 9:41:27 AM
-*X* I'm healthy after 234000 checks at time:6/12/2019 9:41:58 AM
-*X* I'm healthy after 237000 checks at time:6/12/2019 9:42:28 AM
-*X* I'm healthy after 240000 checks at time:6/12/2019 9:43:00 AM
-*X* I'm healthy after 243000 checks at time:6/12/2019 9:43:29 AM
-*X* I'm healthy after 246000 checks at time:6/12/2019 9:43:53 AM
-*X* I'm healthy after 249000 checks at time:6/12/2019 9:44:22 AM
-*X* I'm healthy after 252000 checks at time:6/12/2019 9:44:55 AM
-*X* I'm healthy after 255000 checks at time:6/12/2019 9:45:23 AM
-*X* I'm healthy after 258000 checks at time:6/12/2019 9:45:42 AM
-*X* I'm healthy after 261000 checks at time:6/12/2019 9:46:05 AM
-*X* I'm healthy after 264000 checks at time:6/12/2019 9:46:47 AM
-*X* I'm healthy after 267000 checks at time:6/12/2019 9:47:40 AM
-*X* I'm healthy after 270000 checks at time:6/12/2019 9:48:34 AM
-*X* I'm healthy after 273000 checks at time:6/12/2019 9:49:31 AM
+*X* I'm healthy after 36000 checks at time:6/14/2019 2:05:27 PM
+*X* I'm healthy after 39000 checks at time:6/14/2019 2:05:33 PM
+*X* At checkpoint, upgraded service received 245760 messages
+*X* At checkpoint, upgraded service received 245760 messages
+becoming upgraded primary
+*X* At checkpoint, upgraded service received 245760 messages
+*X* At checkpoint, upgraded service received 245760 messages
+*X* I'm healthy after 42000 checks at time:6/14/2019 2:06:02 PM
