--- a/AmbrosiaTest/AmbrosiaTest/Cmp/asyncbasic_Server.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/asyncbasic_Server.cmp
@@ -1,4 +1,11 @@
-Becoming a primary now
+*X* Trying to connect IC and Language Binding
+*X* InstanceProxy created to communicate with . (Attach: False)
+*X* Start Start()
+*X* Received a take becoming primary checkpoint message
+*X* Sent initial message to LAR
+*X* Sent checkpoint back to LAR
+*X* Becoming a primary now
+*X* End Start()
 *X* Press enter to terminate program.
 *X* Server in Entry Point
 *X* Received 1024 MB so far
