--- a/AmbrosiaTest/AmbrosiaTest/Cmp/asynckillservertest_Server.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/asynckillservertest_Server.cmp
@@ -1,3 +1,4 @@
-Becoming a primary now
+*X* Trying to connect IC and Language Binding
+*X* Becoming a primary now
 *X* Press enter to terminate program.
 *X* Server in Entry Point
