--- a/AmbrosiaTest/AmbrosiaTest/Cmp/asyncactiveactivebasic_Server1.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/asyncactiveactivebasic_Server1.cmp
@@ -3,7 +3,7 @@
 *X* Received a take becoming primary checkpoint message
 *X* Sent initial message to LAR
 *X* Sent checkpoint back to LAR
-Becoming a primary now
+*X* Becoming a primary now
 *X* End Start()
 *X* Press enter to terminate program.
 *X* Received an initial message
