Added one more kill \ restart cycle to the kill job test to make sure restarts again ok

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/killjobtest_ClientJob_Restarted.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/killjobtest_ClientJob_Restarted.cmp
@@ -1,29 +1,2 @@
+*X* Trying to connect IC and Language Binding
 Bytes per RPC	Throughput (GB/sec)
-*X* 65536	0.0273828010297083
-Service Received 1024 MB so far
-Service Received 2048 MB so far
-*X* 32768	0.0709177553954565
-Service Received 3072 MB so far
-*X* 16384	0.0717941152689843
-Service Received 4096 MB so far
-*X* 8192	0.0726432838832339
-*X* 4096	0.0708769724033704
-Service Received 5120 MB so far
-*X* 2048	0.0727033736742785
-Service Received 6144 MB so far
-*X* 1024	0.0726175684424032
-Service Received 7168 MB so far
-Service Received 8192 MB so far
-*X* 512	0.0709311429758552
-*X* 256	0.0713231837827627
-Service Received 9216 MB so far
-Service Received 10240 MB so far
-*X* 128	0.066423578510511
-*X* 64	0.0626573117545812
-Service Received 11264 MB so far
-Service Received 12288 MB so far
-*X* 32	0.0574327695589092
-*X* 16	0.0353197351340568
-Service Received 13312 MB so far
-Bytes received: 13958643712
-DONE
