--- a/AmbrosiaTest/AmbrosiaTest/Cmp/showhelpptijob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/showhelpptijob.cmp
@@ -1,15 +1,17 @@
 Job name is required.
 Server name is required.
-Send port is required.
-Receive port is required.
+Must specify either IC port or both send and receive ports.
 
 Usage: Job.exe [OPTIONS]
 Options:
   -j, --jobName=VALUE        The service name of the job [REQUIRED].
   -s, --serverName=VALUE     The service name of the server [REQUIRED].
       --rp, --receivePort=VALUE
-                             The service receive from port [REQUIRED].
-      --sp, --sendPort=VALUE The service send to port. [REQUIRED]
+                             The service receive from port.
+      --sp, --sendPort=VALUE The service send to port.
+      --icp, --ICPort=VALUE  The IC port, if the IC should be run in proc. Note
+                               that if this is specified, the command line
+                               ports override stored registration settings
       --mms, --maxMessageSize=VALUE
                              The maximum message size.
   -n, --numOfRounds=VALUE    The number of rounds.
