Updated the Net Core help message

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/showhelpimmcoord_Core.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/showhelpimmcoord_Core.cmp
@@ -2,16 +2,16 @@ Instance name is required.Port number is required.
 Worker for Common Runtime for Applications (CRA) [http://github.com/Microsoft/CRA]
 Usage: dotnet ImmortalCoordinator.dll [OPTIONS]
 Options:
-  -i, --instanceName=VALUE   The instance name [REQUIRED].
-  -p, --port=VALUE           An port number [REQUIRED].
-      --aa, --activeActive   Is active-active enabled.
-  -r, --replicaNum=VALUE     The replica #
-      --an, --assemblyName=VALUE
-                             The secure network assembly name.
-      --ac, --assemblyClass=VALUE
-                             The secure network assembly class.
-      --ip, --IPAddr=VALUE   Override automatic self IP detection
-  -h, --help                 show this message and exit
-      --rp, --receivePort=VALUE
-                             The service receive from port override.
-      --sp, --sendPort=VALUE The service send to port override.
+  -i, --instanceName=VALUE         The instance name [REQUIRED].
+  -p, --port=VALUE                 An port number [REQUIRED].
+  -aa, --activeActive              Is active-active enabled.
+  -r, --replicaNum=VALUE           The replica #
+  -an, --assemblyName=VALUE        The secure network assembly name.
+  -ac, --assemblyClass=VALUE       The secure network assembly class.
+  -ip, --IPAddr=VALUE              Override automatic self IP detection
+  -h, --help                       show this message and exit
+  -rp, --receivePort=VALUE         The service receive from port override.
+  -sp, --sendPort=VALUE            The service send to port override.
+  -l, --log=VALUE                  The service log path override.
+  -lst, --logStorageType=VALUE     Can be set to files or blobs. Defaults to
+                                     files
