--- a/AmbrosiaTest/AmbrosiaTest/Cmp/clientsideupgrade_Server.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/clientsideupgrade_Server.cmp
@@ -7,6 +7,9 @@
 *X* At checkpoint, received 15356 messages
 *X* At checkpoint, received 15356 messages
 Received 1024 MB so far
+*X* At checkpoint, received 44775 messages
+*X* At checkpoint, received 44775 messages
+Received 2048 MB so far
 Unable to read data from the transport connection: An existing connection was forcibly closed by the remote host.
    at System.Net.Sockets.NetworkStream.EndRead(IAsyncResult asyncResult)
    at System.Threading.Tasks.TaskFactory`1.FromAsyncTrimPromise`1.Complete(TInstance thisRef, Func`3 endMethod, IAsyncResult asyncResult, Boolean requiresSynchronization)
