--- a/AmbrosiaTest/AmbrosiaTest/Cmp/showhelpptiserver.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/showhelpptiserver.cmp
@@ -1,7 +1,5 @@
 Job name is required.
 Server name is required.
-Send port is required.
-Receive port is required.
 
 Usage: Server.exe [OPTIONS]
 Options:
@@ -12,8 +10,14 @@ Options:
       --sp, --sendPort=VALUE The service send to port. [REQUIRED]
       --nbd, --notBidirectional
                              Disable bidirectional communication.
+      --icp, --ICPort=VALUE  The IC port, if the IC should be run in proc. Note
+                               that if this is specified, the command line
+                               ports override stored registration settings
   -n, --numOfJobs=VALUE      The number of jobs.
   -u, --upgrading            Is upgrading.
   -m, --memoryUsed=VALUE     Memory used.
   -c, --autoContinue         Is continued automatically at start
+  -d, --ICDeploymentMode=VALUE
+                             IC deployment mode specification (SecondProc(
+                               Default)/InProcDeploy/InProcManual)
   -h, --help                 show this message and exit
