Removed Async cmp files and updated InProc cmp files with new Imm Coord output

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocblob_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocblob_ClientJob.cmp
@@ -1,3 +1,4 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 *X* 1024	0.0691794214437819
 Service Received 1024 MB so far
 Bytes received: 1073741824
