--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocdoublekilljob_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocdoublekilljob_ClientJob.cmp
@@ -1,3 +1,4 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 Adding output:inprocdoublekilljobserver
 restoring output:inprocdoublekilljobserver
 restoring input:
