--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocgiantcheckpointtest_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocgiantcheckpointtest_ClientJob.cmp
@@ -1,3 +1,4 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 *X* 65536	0.0349390179795732
 *X* 32768	0.034901707037954
 *X* 16384	0.0351188522223528
