--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprockillservertest_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprockillservertest_ClientJob.cmp
@@ -1,3 +1,4 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 *X* 65536	0.0288983392173579
 Service Received 1024 MB so far
 Reading a checkpoint 2138 bytes
