--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpblob_Server.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpblob_Server.cmp
@@ -1,3 +1,4 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=2500
 *X* Trying to connect IC and Language Binding
 *X* Trying to connect IC and Language Binding
 *X* Trying to do second connection between IC and Language Binding
