--- a/AmbrosiaTest/AmbrosiaTest/Cmp/doublekillserver_AMB2.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/doublekillserver_AMB2.cmp
@@ -1,1 +1,1 @@
-The CRA instance appears to be down. Restart it and this vertex will be instantiated automatically
+Ambrosia.exe Information: 0 : The CRA instance appears to be down. Restart it and this vertex will be instantiated automatically
