--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocfileblob_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocfileblob_ClientJob.cmp
@@ -1,4 +1,4 @@
-Ready ...
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 *X* 1024	0.0437866525479817
 Service Received 1024 MB so far
 Bytes received: 1073741824
