--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocgiantmessagetest_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocgiantmessagetest_ClientJob.cmp
@@ -1,3 +1,4 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 *X* 67108864	0.269758953110822
 Service Received 1024 MB so far
 *X* 33554432	0.0309030953714642
