--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocgiantmessagetest_Server.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocgiantmessagetest_Server.cmp
@@ -1,3 +1,4 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=2500
 *X* At checkpoint, received 0 messages
 *X* At checkpoint, received 0 messages
 *X* becoming primary
