--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprockilljobtest_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprockilljobtest_ClientJob.cmp
@@ -1,2 +1,3 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 restoring output:inprockilljobtestserver
 restoring output:inprockilljobtestserver
