--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocpipeclientonly_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocpipeclientonly_ClientJob.cmp
@@ -1,4 +1,4 @@
-Ready ...
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 Reading a checkpoint 2135 bytes
 *X* 1024	0.0720345985058007
 Service Received 1024 MB so far
