--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeafterserverdone_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeafterserverdone_ClientJob.cmp
@@ -1,3 +1,4 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 *X* 65536	0.038147153537414
 Service Received 1024 MB so far
 *X* 32768	0.0371572217956965
