--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradebeforeserverdone_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradebeforeserverdone_ClientJob.cmp
@@ -1,3 +1,4 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 *X* 65536	0.0229463864678826
 Service Received 1024 MB so far
 *X* 32768	0.0367999240861726
