--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeclient_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeclient_ClientJob.cmp
@@ -1,3 +1,4 @@
+ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 *X* 65536	0.0417283677961038
 Service Received 1024 MB so far
 FATAL ERROR 0: Migrating or upgrading. Must commit suicide since I'm the primary
