--- a/AmbrosiaTest/AmbrosiaTest/Cmp/unittestinproctcp_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/unittestinproctcp_ClientJob.cmp
@@ -2,7 +2,8 @@ ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
 *X* Trying to connect IC and Language Binding
 *X* Trying to connect IC and Language Binding
 *X* Trying to do second connection between IC and Language Binding
-*X* 1024	0.0712906759110332
+Bytes per RPC	Throughput (GB/sec)
+*X* 1024	0.0253109624484106
 Service Received 1024 MB so far
 Bytes received: 1073741824
 DONE
