Updated cmp files ...

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocclienttcpserverpipe_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocclienttcpserverpipe_ClientJob.cmp
@@ -1,4 +1,4 @@
-ImmortalCoordinator -i=inprocclienttcpserverpipeclientjob -p=1500
+Bytes per RPC	Throughput (GB/sec)
 *X* Trying to connect IC and Language Binding
 *X* Trying to connect IC and Language Binding
 *X* Trying to do second connection between IC and Language Binding
