--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocdoublekilljob_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocdoublekilljob_ClientJob.cmp
@@ -1,4 +1,4 @@
-ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
+Bytes per RPC	Throughput (GB/sec)
 Adding output:inprocdoublekilljobserver
 restoring output:inprocdoublekilljobserver
 restoring input:
