--- a/AmbrosiaTest/AmbrosiaTest/Cmp/showhelpptijob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/showhelpptijob.cmp
@@ -3,21 +3,18 @@ Server name is required.
 
 Usage: Job.exe [OPTIONS]
 Options:
-  -j, --jobName=VALUE        The service name of the job [REQUIRED].
-  -s, --serverName=VALUE     The service name of the server [REQUIRED].
-      --rp, --receivePort=VALUE
-                             The service receive from port.
-      --sp, --sendPort=VALUE The service send to port.
-      --icp, --ICPort=VALUE  The IC port, if the IC should be run in proc. Note
-                               that if this is specified, the command line
-                               ports override stored registration settings
-      --mms, --maxMessageSize=VALUE
-                             The maximum message size.
-  -n, --numOfRounds=VALUE    The number of rounds.
-      --nds, --noDescendingSize
-                             Disable message descending size.
-  -c, --autoContinue         Is continued automatically at start
-  -d, --ICDeploymentMode=VALUE
-                             IC deployment mode specification (SecondProc(
-                               Default)/InProcDeploy/InProcManual)
-  -h, --help                 show this message and exit
+  -j, --jobName=VALUE              The service name of the job [REQUIRED].
+  -s, --serverName=VALUE           The service name of the server [REQUIRED].
+  -rp, --receivePort=VALUE         The service receive from port.
+  -sp, --sendPort=VALUE            The service send to port.
+  -icp, --ICPort=VALUE             The IC port, if the IC should be run in proc.
+                                      Note that if this is specified, the
+                                     command line ports override stored
+                                     registration settings
+  -mms, --maxMessageSize=VALUE     The maximum message size.
+  -n, --numOfRounds=VALUE          The number of rounds.
+  -nds, --noDescendingSize         Disable message descending size.
+  -c, --autoContinue               Is continued automatically at start
+  -d, --ICDeploymentMode=VALUE     IC deployment mode specification (SecondProc(
+                                     Default)/InProcDeploy/InProcManual)
+  -h, --help                       show this message and exit
