--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocclientpipeservertcp_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocclientpipeservertcp_ClientJob.cmp
@@ -1,4 +1,4 @@
-ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
+Bytes per RPC	Throughput (GB/sec)
 *X* 1024	0.0683427535617988
 Service Received 1024 MB so far
 Bytes received: 1073741824
