--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocclientsideupgrade_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocclientsideupgrade_ClientJob.cmp
@@ -1,4 +1,4 @@
-ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
+Bytes per RPC	Throughput (GB/sec)
 *X* 65536	0.0336476771110761
 Service Received 1024 MB so far
 FATAL ERROR 0: Migrating or upgrading. Must commit suicide since I'm the primary
