Updating tests and cmps due to changes from CRA

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpclientonly_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpclientonly_ClientJob.cmp
@@ -1,4 +1,4 @@
-ImmortalCoordinator -i=inproctcpclientonlyclientjob -p=1500
+*X* ImmortalCoordinator -i=inproctcpclientonlyclientjob -p=1500
 *X* Trying to connect IC and Language Binding
 *X* Trying to connect IC and Language Binding
 *X* Trying to do second connection between IC and Language Binding
