--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpkilljobtest_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpkilljobtest_ClientJob.cmp
@@ -1,4 +1,5 @@
-ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
+*X* ImmortalCoordinator -i=inproctcpkilljobtestclientjob -p=1500
 *X* Trying to connect IC and Language Binding
 *X* Trying to connect IC and Language Binding
 *X* Trying to do second connection between IC and Language Binding
+Bytes per RPC	Throughput (GB/sec)
