--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpkilljobtest_ClientJob_Restarted.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpkilljobtest_ClientJob_Restarted.cmp
@@ -1,5 +1,5 @@
+*X* ImmortalCoordinator -i=inproctcpkilljobtestclientjob -p=1500
 *X* Trying to connect IC and Language Binding
 *X* Trying to connect IC and Language Binding
 *X* Trying to do second connection between IC and Language Binding
-*X* 65536	0.0286658366378115
-Service Received 1024 MB so far
+Bytes per RPC	Throughput (GB/sec)
