--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocdoublekilljob_ClientJob_Restarted.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocdoublekilljob_ClientJob_Restarted.cmp
@@ -1,7 +1,9 @@
-*X* 65536	0.0291699712111636
+Bytes per RPC	Throughput (GB/sec)
+*X* 65536	0.0168222042626127
 Service Received 1024 MB so far
-*X* 32768	0.0694201690790696
-*X* 16384	0.0687487160317922
+*X* 32768	0.0381830688994807
+Service Received 2048 MB so far
+*X* 16384	0.0357962368518722
 Service Received 3072 MB so far
 *X* 8192	0.0699934350357543
 Service Received 4096 MB so far
