--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprockilljobtest_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprockilljobtest_ClientJob.cmp
@@ -1,3 +1,1 @@
-ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
-restoring output:inprockilljobtestserver
-restoring output:inprockilljobtestserver
+Bytes per RPC	Throughput (GB/sec)
