--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprockillservertest_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprockillservertest_ClientJob.cmp
@@ -1,5 +1,5 @@
-ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
-*X* 65536	0.0288983392173579
+Bytes per RPC	Throughput (GB/sec)
+*X* 65536	0.0202977421808515
 Service Received 1024 MB so far
 Reading a checkpoint 2138 bytes
 *X* 32768	0.0650514753951088
