--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpupgradeserver_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpupgradeserver_ClientJob.cmp
@@ -1,8 +1,9 @@
-ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
+*X* ImmortalCoordinator -i=inproctcpupgradeserverclientjob -p=1500
 *X* Trying to connect IC and Language Binding
 *X* Trying to connect IC and Language Binding
 *X* Trying to do second connection between IC and Language Binding
-*X* 65536	0.0178589619199784
+Bytes per RPC	Throughput (GB/sec)
+*X* 65536	0.019883684383327
 Service Received 1024 MB so far
 *X* 32768	0.0364469877087673
 Service Received 2048 MB so far
