--- a/InternalImmortals/XamarinCommandShell/XamarinCommandShell/MainPage.xaml
+++ b/InternalImmortals/XamarinCommandShell/XamarinCommandShell/MainPage.xaml
@@ -8,11 +8,10 @@
                x:Name="homeDirectory"
                Completed="homeDirectory_Completed" />
 
-        <Editor Text=""
-                IsReadOnly="false"
-                HeightRequest="500" 
-                WidthRequest="1000"                 
+        <ScrollView x:Name="outputScroller">
+            <Label  Text=""
                 x:Name="consoleOutput"/>
+        </ScrollView>
         <Entry Placeholder ="&lt;Enter Command&gt;"
                x:Name="command"
                Completed="Command_Completed" />
