--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprockilljobtest_ClientJob_Restarted.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprockilljobtest_ClientJob_Restarted.cmp
@@ -1,4 +1,1 @@
-
-restoring output:inprockilljobtestserver
-restoring input:inprockilljobtestserver
-restoring input:inprockilljobtestserver
+Bytes per RPC	Throughput (GB/sec)
