--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeafterserverdone_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeafterserverdone_ClientJob.cmp
@@ -1,5 +1,5 @@
-ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
-*X* 65536	0.038147153537414
+Bytes per RPC	Throughput (GB/sec)
+*X* 65536	0.0268049854667524
 Service Received 1024 MB so far
 *X* 32768	0.0371572217956965
 Service Received 2048 MB so far
