--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprockilljobtest_Server.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprockilljobtest_Server.cmp
@@ -3,53 +3,55 @@
 *X* becoming primary
 *X* Press enter to terminate program.
 *X* Server in Entry Point
-*X* At checkpoint, received 15296 messages
-*X* At checkpoint, received 15296 messages
+*X* At checkpoint, received 15295 messages
+*X* At checkpoint, received 15295 messages
 Received 1024 MB so far
-*X* At checkpoint, received 44839 messages
-*X* At checkpoint, received 44839 messages
-*X* I'm healthy after 3000 checks at time:9/4/2020 12:25:20 PM
+*X* I'm healthy after 3000 checks at time:10/1/2020 8:58:38 AM
+*X* At checkpoint, received 44736 messages
+*X* At checkpoint, received 44736 messages
 Received 2048 MB so far
-*X* At checkpoint, received 101717 messages
-*X* At checkpoint, received 101717 messages
+*X* At checkpoint, received 101485 messages
+*X* At checkpoint, received 101485 messages
+*X* I'm healthy after 6000 checks at time:10/1/2020 8:59:26 AM
 Received 3072 MB so far
-*X* At checkpoint, received 210832 messages
-*X* At checkpoint, received 210832 messages
+*X* At checkpoint, received 210202 messages
+*X* At checkpoint, received 210202 messages
 Received 4096 MB so far
-*X* At checkpoint, received 421533 messages
-*X* At checkpoint, received 421533 messages
+*X* I'm healthy after 9000 checks at time:10/1/2020 9:00:13 AM
+*X* At checkpoint, received 419326 messages
+*X* At checkpoint, received 419326 messages
 Received 5120 MB so far
-*X* I'm healthy after 6000 checks at time:9/4/2020 12:26:07 PM
-*X* At checkpoint, received 823575 messages
-*X* At checkpoint, received 823575 messages
+*X* At checkpoint, received 818385 messages
+*X* At checkpoint, received 818385 messages
 Received 6144 MB so far
-*X* At checkpoint, received 1590265 messages
-*X* At checkpoint, received 1590265 messages
+*X* I'm healthy after 12000 checks at time:10/1/2020 9:01:00 AM
+*X* At checkpoint, received 1580223 messages
+*X* At checkpoint, received 1580223 messages
 Received 7168 MB so far
-*X* At checkpoint, received 3033329 messages
-*X* At checkpoint, received 3033329 messages
+*X* At checkpoint, received 3018947 messages
+*X* At checkpoint, received 3018947 messages
 Received 8192 MB so far
-*X* I'm healthy after 9000 checks at time:9/4/2020 12:26:54 PM
-*X* At checkpoint, received 5733427 messages
-*X* At checkpoint, received 5733427 messages
+*X* I'm healthy after 15000 checks at time:10/1/2020 9:01:47 AM
+*X* At checkpoint, received 5708293 messages
+*X* At checkpoint, received 5708293 messages
 Received 9216 MB so far
-*X* At checkpoint, received 10650338 messages
-*X* At checkpoint, received 10650338 messages
+*X* At checkpoint, received 10595429 messages
+*X* At checkpoint, received 10595429 messages
+*X* I'm healthy after 18000 checks at time:10/1/2020 9:02:34 AM
 Received 10240 MB so far
-*X* At checkpoint, received 19199906 messages
-*X* At checkpoint, received 19199906 messages
-*X* At checkpoint, received 33163401 messages
-Reading a checkpoint 1900 bytes
-*X* At checkpoint, received 33163401 messages
+*X* At checkpoint, received 19021210 messages
+*X* At checkpoint, received 19021210 messages
+*X* At checkpoint, received 33003324 messages
+*X* At checkpoint, received 33003324 messages
 Received 11264 MB so far
-*X* I'm healthy after 12000 checks at time:9/4/2020 12:27:41 PM
-*X* At checkpoint, received 59264897 messages
-*X* At checkpoint, received 59264897 messages
+*X* I'm healthy after 21000 checks at time:10/1/2020 9:03:21 AM
+*X* At checkpoint, received 58838590 messages
+*X* At checkpoint, received 58838590 messages
 Received 12288 MB so far
-*X* I'm healthy after 15000 checks at time:9/4/2020 12:28:30 PM
-*X* At checkpoint, received 99089422 messages
-*X* At checkpoint, received 99089422 messages
-*X* I'm healthy after 18000 checks at time:9/4/2020 12:29:22 PM
+*X* I'm healthy after 24000 checks at time:10/1/2020 9:04:09 AM
+*X* At checkpoint, received 98634371 messages
+*X* At checkpoint, received 98634371 messages
+*X* I'm healthy after 27000 checks at time:10/1/2020 9:05:00 AM
 Received 13312 MB so far
 Bytes received: 13958643712
 DONE
