--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeclient_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeclient_ClientJob.cmp
@@ -1,4 +1,4 @@
-*X* ImmortalCoordinator -i=unittestinproctcpserver -p=1500
+Bytes per RPC	Throughput (GB/sec)
 *X* 65536	0.0417283677961038
 Service Received 1024 MB so far
 FATAL ERROR 0: Migrating or upgrading. Must commit suicide since I'm the primary
